--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "overrides": {
       "@prisma/dev>hono": ">=4.11.8",
       "@workflow/web>next": ">=16.1.6",
-      "@workflow/core>devalue": ">=5.6.2"
+      "@workflow/core>devalue": ">=5.6.2",
+      "@workflow/world-local>undici": "~6.23.0"
     }
   }
 }
