Use navigation-menu component(s)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "ui-diff": "pnpm exec shadcn diff",
-    "ui-gen": "pnpm exec shadcn add --overwrite accordion alert alert-dialog avatar badge breadcrumb button-group dialog card chart checkbox collapsible dropdown-menu empty field input-group item progress radio-group scroll-area select separator sheet sidebar skeleton sonner spinner table tabs textarea toggle toggle-group tooltip",
+    "ui-gen": "pnpm exec shadcn add --overwrite accordion alert alert-dialog avatar badge breadcrumb button-group dialog card chart checkbox collapsible dropdown-menu empty field input-group item navigation-menu progress radio-group scroll-area select separator sheet sidebar skeleton sonner spinner table tabs textarea toggle toggle-group tooltip",
     "hypertune-gen": "pnpm exec hypertune",
     "prisma": "pnpm exec prisma",
     "prisma-gen": "pnpm exec prisma generate --no-hints",
