Migrate flags from hypertune to vercel which is easier for my management

--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,9 +1,8 @@
 # OTEL_LOG_LEVEL="info"
 
-# flags-sdk hypertune configuration
-EXPERIMENTATION_CONFIG_ITEM_KEY="hypertune_7556"
-NEXT_PUBLIC_HYPERTUNE_TOKEN="U2FsdGVkX18AwjBgbOCzVMfVrpUhBQOrDLR36a/cWKI="
-HYPERTUNE_OUTPUT_DIRECTORY_PATH=.generated
+# vercel-flags configuration
+FLAGS="vf_server_....."
+VERCEL_EXPERIMENTAL_EMBED_FLAG_DEFINITIONS=1
 
 # CRON_SECRET="your-cron-secret"
 # RESEND_API_KEY="your-resend-api-key"
