--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "ui-diff": "pnpm exec shadcn diff",
     "ui-gen": "pnpm exec shadcn add --overwrite accordion alert alert-dialog avatar badge breadcrumb button-group dialog card chart checkbox collapsible dropdown-menu empty field input-group item navigation-menu progress radio-group scroll-area select separator sheet sidebar skeleton sonner spinner table tabs textarea toggle toggle-group tooltip",
-    "hypertune-gen": "pnpm exec hypertune",
     "prisma": "pnpm exec prisma",
     "prisma-gen": "pnpm exec prisma generate --no-hints",
     "prisma-push": "pnpm exec prisma db push",
@@ -16,7 +15,7 @@
     "better-auth-gen": "pnpm exec better-auth generate",
     "email-dev": "email dev --dir src/emails/templates --port 4001",
     "workflow-web": "workflow web",
-    "codegen": "pnpm hypertune-gen && pnpm prisma-gen",
+    "codegen": "pnpm prisma-gen",
     "typegen": "next typegen && pnpm codegen",
     "build": "next build",
     "dev": "next dev",
@@ -33,7 +32,7 @@
     "@azure/storage-blob": "12.31.0",
     "@base-ui/react": "1.1.0",
     "@better-auth/passkey": "1.4.18",
-    "@flags-sdk/hypertune": "0.3.2",
+    "@flags-sdk/vercel": "1.0.0",
     "@fumadocs/base-ui": "16.5.2",
     "@hono/zod-validator": "0.7.6",
     "@opentelemetry/instrumentation-mongodb": "0.64.0",
@@ -51,6 +50,7 @@
     "@spdx/tools": "0.1.0",
     "@stripe/stripe-js": "8.7.0",
     "@vercel/analytics": "1.6.1",
+    "@vercel/flags-core": "1.0.0",
     "@vercel/functions": "3.4.2",
     "@vercel/oidc": "3.2.0",
     "@vercel/otel": "2.1.0",
@@ -67,7 +67,6 @@
     "fumadocs-core": "16.5.2",
     "fumadocs-mdx": "14.2.7",
     "hono": "4.11.9",
-    "hypertune": "2.10.1",
     "lucide-react": "0.563.0",
     "mermaid": "11.12.2",
     "mongodb": "7.1.0",
