--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -72,6 +72,7 @@ updates:
         patterns: ['*']
         exclude-patterns:
           - '@azure/*'
+          - '@biomejs/biome'
           - 'fumadocs-*'
           - '@fumadocs/*'
           - '@types/react'
