--- a/turbo.jsonc
+++ b/turbo.jsonc
@@ -16,6 +16,8 @@
     "CRON_SECRET",
     "DATABASE_URL",
     "EXPERIMENTATION_CONFIG_ITEM_KEY",
+    "FLAGS",
+    "FLAGS_SECRET",
     "MONGO_URL",
     "RESEND_API_KEY",
     "STRIPE_SECRET_KEY",
